Revision history for Perl module Git::PurePerl:

0.33
     - add support for version 2 pack index files
     - add support for ref_delta objects in pack files
     - update with cleaner tars

0.32 Fri Nov 14 16:47:59 GMT 2008
     - initial release